--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,8 @@
-
 body {
     background-color: black;
+}
+
+body > div {
     font-family: sans-serif ;
     text-align: center;
     color: white;
@@ -12,7 +14,6 @@ h1 {
     font-size: 1.5em;
     margin: 10px;
 }
-
 
 table {
     margin: 20px auto;
