--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,11 @@
 body {
     background-color: black;
+    font-size: 2em;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 0.5em;
 }
 
 body > div {
@@ -11,8 +17,8 @@ body > div {
 h1 {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: #ffffff;
-    font-size: 1.5em;
-    margin: 10px;
+    font-size: 2.5em;
+    padding: 50px;
 }
 
 table {
@@ -48,8 +54,8 @@ td, th {
 .cell {
     cursor: pointer;
     color: white;
-    width: 100px;
-    height: 80px;
+    width: 200px;
+    height: 160px;
     font-size: 4em;
     padding: 0px;
     margin: 0px;
@@ -58,6 +64,7 @@ td, th {
 #scores {
     display: flex;
     justify-content: center;
+    padding: 50px;
 }
 
 #scores > div {
