--- a/styles.css
+++ b/styles.css
@@ -1,77 +1,76 @@
 body {
-    background-color: black;
-    font-size: 2em;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-top: 0.5em;
+  background-color: black;
+  font-size: 1.5em;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 0.5em;
 }
 
 body > div {
-    font-family: sans-serif ;
-    text-align: center;
-    color: white;
+  font-family: sans-serif;
+  text-align: center;
+  color: white;
 }
 
 h1 {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: #ffffff;
-    font-size: 2.5em;
-    padding: 50px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  color: #ffffff;
+  font-size: 1.5em;
 }
 
 header {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 table {
-    margin: 20px auto;
-    border-collapse: collapse;
-    table-layout: fixed;
+  margin: 20px auto;
+  border-collapse: collapse;
+  table-layout: fixed;
 }
 
 table tr:first-child td {
-    border-top: none;
+  border-top: none;
 }
 
 table tr:last-child td {
-    border-bottom: none;
+  border-bottom: none;
 }
 
 table tr td:first-child {
-    border-left: none;
-  }
-  
+  border-left: none;
+}
+
 table tr td:last-child {
-    border-right: none;
+  border-right: none;
 }
 
-td, th {
-    text-align: center;
-    border: 4px solid white;
-    width: 50px;
-    height: 50px;
+td,
+th {
+  text-align: center;
+  border: 4px solid white;
+  width: 50px;
+  height: 50px;
 }
-
 
 .cell {
-    cursor: pointer;
-    color: white;
-    width: 200px;
-    height: 160px;
-    font-size: 4em;
-    padding: 0px;
-    margin: 0px;
+  cursor: pointer;
+  color: white;
+  width: 180px;
+  height: 120px;
+  font-size: 4em;
+  padding: 0px;
+  margin: 0px;
 }
 
 #scores {
-    display: flex;
-    justify-content: center;
-    padding: 50px;
+  display: flex;
+  justify-content: center;
+  padding: 20px;
 }
 
 #scores > div {
-    padding: 10px 50px;
-    flex-direction: column;
+  padding: 10px 50px;
+  flex-direction: column;
 }
